src/index.css
html, body {
  height: 100%;
  width: 100%;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.about {
  font-size: large;
  padding: 6%;
}

.aboutp {
  font-size: 170%;
  padding: 4%;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.main-color {
  background-color: #212F3D;
}

#footer {
  position: relative;
  width: 100%;
  bottom: 0%;
  height: 4rem;
  margin-top: 2px;
  background-color: #212F3D;
}

.brightness {
  background-color: black;
}

.brightness img:hover {
  opacity: .55;
  transition: 1.1;
}

h1{
  font-family: Arial, Helvetica, sans-serif;
}


.zoom{
  transition: .75s;
}

.zoom:hover {
  transform: scale(1.01);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

